--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript">
+      //content doesn't matter
+      //https://stackoverflow.com/questions/26347742/safaris-getboundingclientrect-implementation-returns-incorrect-top
+    </script>
   </body>
 </html>
